2005-05-12 Franck Tabary <franck34 at users.sourceforge.net>
        * released eAccelerator 0.9.3-rc2

2005-05-11 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>
        * Fix for must constructor related problems with encoded scripts and php5. Also a fixes
          memory leak in the loader. (Thanks larnot)

2005-05-10 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>
	
        * Added some includes to satisfy VC.NET (thanks to dakalka, patch 1198522)
        * This patch adds the right destructor for the propertiesinfo hashtable, but it doesn't fix bug 1179270
        * Updated README.win32 with some extra information from Larnot

2005-05-09 Franck Tabary <franck34 at users.sourceforge.net>
        * released eAccelerator 0.9.3-rc1

2005-05-09 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Fixes the segfault when loading encoded script with eloader and php5
        * Commited README.win32 with instructions to compile eAccelerator on windows
        * Add the destructor to properties info hashtable in restore_class_entry, fixes bug 1179270

2005-05-06 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Patch fixing eLoader compilation.

2005-05-05 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * This patch fixes some stuff concerning configuration. With this patch 
          some parts that are forgotten with the code split are fixed. 
          They are also needed to compile eA with VC. The other stuff should make it possible 
          to compile eA as a static module for php.
        * Updated VC project files

2005-05-02  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Patch fixing php 5 constructor problems. Fixes bugs 1179264, 1121757 and 1099693
        * Added switch -w to encoder so you can encode file without the check for eloader. This is 
          based on patch 1191147 with some fixes.

2005-04-26  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>
